<resources>
    <string name="app_name">Agro Farmers</string>
    <string name="prompt_firstname">First Name</string>
    <string name="prompt_lastname">Last Name</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_up">register</string>
    <string name="action_sign_in">sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="signup_prompt">No account? Sign Up.</string>
    <string name="signin_prompt">I already have an account. Sign In.</string>

    <string name="request">Your Request to transport</string>

    <string name="processing">is currently been processed.</string>
    <string name="using">using a</string>

    <string name="process_complete">Done</string>
    <string name="title_activity_request">RequestActivity</string>
    <string name="product">Product</string>
    <string name="weight">Weight(KG)</string>
    <string name="transport">Transportation: </string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="login_error_message">Please make sure you enter an email address and password!</string>
    <string name="login_error_title">Error!</string>
    <string name="dialog_title">Transport Details</string>
    <string name="btn_ok">OK</string>
    <string name="btn_cancel">CANCEL</string>

    <string name="signup_error_message">Please make sure you enter an email address and password!</string>
    <string name="signup_error_title">Error!</string>
    <string name="signup_success">Account successfully created! You can now Login.</string>
    <string name="login_button_label">Login</string>
    <string name="sign_up_text">Sign Up!</string>
    <string name="title_activity_login">Sign in</string>
    <string name="add_item">Add New Item</string>
    <string name="action_logout">Logout</string>

    <string-array name="transport_type">
        <item>Mini Van</item>
        <item>Space Bus</item>
        <item>Pick-Up</item>
        <item>Lorry</item>
        <item>Container</item>
        <item>Truck</item>
    </string-array>
</resources>
